--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/restapi
 spring.datasource.username=admin
 spring.datasource.password=123
+
+
+#Error page Handler
+server.error.whitelabel.enabled=false
+
+
+
