connected to docker base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restapi
-spring.datasource.username=admin
+spring.datasource.url=jdbc:mysql://localhost:3307/subjects_db
+spring.datasource.username=mysqlSubuser
 spring.datasource.password=123
 
 
